--- a/build.properties
+++ b/build.properties
@@ -37,7 +37,7 @@ dspace.name = DSpace
 solr.server=http://localhost:8080/solr
 
 # Default language for metadata values
-default.language = pt_BR
+default.language = es_PE
 
 ##########################
 # DATABASE CONFIGURATION #
