--- a/dspace.cfg
+++ b/dspace.cfg
@@ -46,7 +46,7 @@ dspace.url = ${dspace.baseUrl}/xmlui
 dspace.name = DSpace
 
 # Default language for metadata values
-default.language = pt_BR
+default.language = es_PE
 
 ##### Database settings #####
 
